[package]
name = "what"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.28.1"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.39.3", features = ["full"] }
